--- a/cocolink/cocolink/static/test/test.html
+++ b/cocolink/cocolink/static/test/test.html
@@ -49,7 +49,11 @@
 テキスト<br>
 テキスト<br>
 テキスト<br>
-<div id="test">たて</div>
+<div id="test"></div>
+<div id="test2"></div>
+
+
+あああ
 テキスト<br>
 テキスト<br>
 テキスト<br>
